--- a/cardlist/index.html
+++ b/cardlist/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main">
         <div class="tittle">
-            <h1>Semana</h1>
+            <h1>~Semana~</h1>
         </div>
         <div class="cards">
             <div class="card">
